adjust scorebox spacing, text color correction

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   height: 480px;
   background-color: white;
   border-radius: 40px;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 30px 30px 25px rgba(0, 0, 50, 0.1);
 }
 
 /* .container {
@@ -61,7 +61,7 @@ body {
 h2.result-heading {
   font-size: 24px;
   font-weight: 500;
-  margin: 0 0 30px 0;
+  margin: 0 0 35px 0;
   color: hsl(241, 100%, 89%);
 }
 
@@ -71,8 +71,8 @@ h2.result-heading {
   align-items: center;
   justify-content: center;
   background: linear-gradient(hsl(256, 72%, 46%, 1), hsl(241, 72%, 46%, 0));
-  width: 180px;
-  height: 180px;
+  width: 190px;
+  height: 190px;
   border-radius: 50%;
 }
 
@@ -88,7 +88,8 @@ h2.result-heading {
 }
 
 .circle > .fraction {
-  color: hsl(241, 100%, 89%);
+  color: hsl(252, 100%, 67%);
+  font-weight: 700;
   display: flex;
   flex: 1;
   /* background-color: aquamarine; */
@@ -128,7 +129,7 @@ h2.summary-heading {
   align-content: flex-start;
   color: black;
   width: 75%;
-  margin: 0 0 25px 0;
+  margin: 0 0 20px 0;
 }
 
 .score-box {
@@ -136,6 +137,7 @@ h2.summary-heading {
   flex-direction: row;
   flex: 0 1 2em;
   justify-content: space-between;
+  font-size: 18px;
   font-weight: 800;
   align-items: center ;
   margin-bottom: 1em;
@@ -165,10 +167,11 @@ h2.summary-heading {
 }
 
 .score-box .icon {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 1%;
-  margin-right: 5px;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 3%;
+  margin-right: 10px;
+  margin-left: 5px;
 }
 
 .label {
@@ -197,6 +200,7 @@ h2.summary-heading {
 }
 
 .score-box .score {
+  margin-right: 5px;
   color: black;
 }
 
